<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connection_error">No internet</string>

    <string name="password">password</string>
    <string name="name">name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_user">I’m already a member</string>
    <string name="sign_in">Log In</string>
    <string name="update">Update Contact</string>
    <string name="save">Save</string>
    <string name="phone">phone</string>
    <string name="sign_ip">Sign In</string>
    <string name="add_contact">Add Contact</string>
    <string name="app_name1">My Contacts</string>
    <string name="log_in">Log In</string>
</resources>