<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_auth"
        android:elevation="6dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.60"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_name_auth"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@id/tv_sign_up_text"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_input_auth"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/input_password_auth"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@id/input_name_auth"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_input_auth"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry,TextFields" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_password_auth"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/bg_sign_in_btn"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_user"
                android:textColor="#3C3B3B"
                android:textSize="16sp" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/sign_up"
                android:textColor="#121A47"
                android:textSize="18sp" />
        </LinearLayout>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>