<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back_btn"
        android:padding="5dp"
        android:background="#00FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="15dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_width="40dp"
        android:layout_height="40dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_auth"
        android:elevation="6dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.55"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/add_contact"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@id/tv_sign_up_text"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_input_auth"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@id/input_name"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_input_auth"
            android:hint="@string/phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry,TextFields" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_phone"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/bg_sign_in_btn"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>